--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,5 @@
-html, body {
-    height: 100%;
-}
-
-html {
-    display: table;
-    margin: auto;
-}
-
 body {
-    display: table-cell;
-    vertical-align: middle;
+    text-align: center;
 }
 .valueBox {
    width: 320px;
