--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
    height: 300px;
    box-shadow: -3px -3px 7px #e9e9e9a9,
       3px 3px 7px #e9e9e9a9;
-    align-content: center
+    align-content: center;
 }
 .valueBox:hover {
    top: 30px;
@@ -11,18 +11,18 @@
       -3px -3px 12px #e9e9e9a9,
       3px 3px 7px #999999a9,
       -3px -3px 12px #e9e9e9a9;
-    align-content: center
+    align-content: center;
    animation: uplift 0.1s 1 linear;
 }
 .valueBox:not( :hover) {
    animation: downlift 0.1s 1 linear;
    top: 40px;
-    align-content: center
+    align-content: center;
 }
 div.input {
    top: 450px;
    left: 550px;
-    align-content: center
+    align-content: center;
 }
 div.input input {
    height: 30px;
@@ -33,7 +33,7 @@ div.input input {
    opacity: 0.7;
    border: none;
    border-radius: 4px;
-    align-content: center
+    align-content: center;
 }
 #red {
    margin-top: 40px;
