--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ div.input input {
    height: 30px;
    width: 100px;
    font-size: 30px;
-   color: black;
+   color: white;
    text-align: center;
    opacity: 0.7;
    border: none;
